# nextcloud-recipe-fetcher

./: .gitignore  pyproject.toml  requirements-dev.txt
scripts/: __init__.py  docs.sh  fix.sh  install.py  install.sh  lint.py  lint.sh  recipito.sh  setup.sh  test.py  test.sh  upgrade.sh  validate.sh
src/: __init__.py  main.py
src/recipito/: __init__.py  logger.py  main.py  models.py  nextcloud_recipe.py  text.py  utils.py
src/recipito/models/: __init__.py  base.py  instruction.py  just_the_recipe.py  nextcloud.py
tests/: test_main.py  test_models.py
