[project]
name = "recipito"
version = "0.1.0"
description = "URL title fetcher tool"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.1"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.2.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
recipito = "recipito.main:app"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 